[package]
name = "devhub-cache-api"
version = "0.1.0"
edition = "2021"

[dependencies]
near-workspaces = { version = "0.14.0", optional = true }  # near = { git = "https://github.com/akorchyn/near-api", branch = "main" }
near = { path = "../near-api", features = ["workspaces"] }
near-account-id = "1.0.0"
near-sdk = "5.5.0"
rocket = "0.5.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["workspaces"]
workspaces = ["near-workspaces"]

[profile.dev]
rustc = "nightly"

[profile.release]
rustc = "nightly"

# [dev-dependencies]
# tokio = { version = "1.0", default-features = false, features = ["full"] }
# near = { path = ".", features = ["workspaces"] }
